--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
         "webpack": "^4.41.6",
         "webpack-cli": "3.3.11",
         "webpack-dev-server": "^3.10.3"
+    },
+    "dependencies": {
+        "immer": "^9.0.21",
+        "lodash": "^4.17.21"
     }
 }
