--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     },
     "dependencies": {
         "immer": "^9.0.21",
-        "lodash": "^4.17.21"
+        "lodash": "^4.17.21",
+        "redux": "^4.2.1",
+        "redux-devtools-extension": "^2.13.9",
+        "redux-thunk": "^2.4.2"
     }
 }
