--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
         "webpack-dev-server": "^3.10.3"
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^1.9.3",
         "immer": "^9.0.21",
         "lodash": "^4.17.21",
         "redux": "^4.2.1",
         "redux-devtools-extension": "^2.13.9",
+        "redux-logger": "^3.0.6",
         "redux-thunk": "^2.4.2"
     }
 }
